--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   "author": "Adenekan Wonderful",
   "dependencies": {
     "chalk": "^4.0.0",
+    "clui": "^0.3.6",
     "commander": "^5.0.0",
     "figlet": "^1.3.0",
+    "glob": "^7.1.6",
     "inquirer": "^7.1.0",
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
+    "replace": "^1.1.5",
     "touch": "^3.1.0"
   }
 }
