--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
     "replace": "^1.1.5",
+    "replace-in-file": "^5.0.2",
     "touch": "^3.1.0"
   }
 }
