--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cssunit",
   "version": "0.0.1",
-  "description": "A cli tool to convert units in your css file",
+  "description": "A cli tool to convert units in your file",
   "main": "index.js",
   "license": "MIT",
   "homepage": "https://github.com/adenekan41/cssunit#readme",
@@ -19,7 +19,7 @@
   "keywords": [
     "css",
     "unit converter",
-    "px to rem",
+    "0.0625rem to rem",
     "rem to em",
     "css units converter"
   ],
