--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cssunit",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A cli tool to convert units in your file",
   "main": "index.js",
   "license": "MIT",
@@ -19,7 +19,7 @@
   "keywords": [
     "css",
     "unit converter",
-    "0.0625rem to rem",
+    "px to rem",
     "rem to em",
     "css units converter"
   ],
@@ -27,7 +27,6 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "clui": "^0.3.6",
-    "figlet": "^1.3.0",
     "inquirer": "^7.1.0",
     "minimist": "^1.2.5",
     "replace-in-file": "^5.0.2"
