--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unitcss",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "A cli tool to convert units in your file",
   "main": "index.js",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "unit converter",
     "px to rem",
     "rem to em",
-    "css units converter"
+    "css unit converter"
   ],
   "author": "Adenekan Wonderful <hellocodewonders@gmail.com> (https://codewonders.dev)",
   "dependencies": {
